# Live-NSE-BSE-MCP

./: .env  .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  check_tool_serialization.py  config.py  debug_mcp.py  env.example  ise-mcp-server.bat  ise-mcp-stdio.bat  ise_mcp_server.py  pyproject.toml  requirements.txt  setup.py  test_clean_tools.py  test_connection.py  test_tools.py  test_vscode_connection.py
client/: CLIENT_README.md  __init__.py  client_package_summary.md  client_requirements.txt  mcp_client.py  simple_mcp_client.py
examples/: basic_usage.py
ise_mcp/: __init__.py  config.py  server.py  stdio_server.py
tests/: __init__.py  check_tool_serialization.py  debug_mcp.py  test_clean_tools.py  test_connection.py  test_tools.py  test_vscode_connection.py
